traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:1: error: Missing closing brace `}' assumed here
override def run() {
^Snake:1: error: expected start of definition
override def run() {
         ^Snake:10: error: expected class or object definition
def positionFinale() {
^Snake:22: error: expected class or object definition
def pasDeSerpent(){
^